tests/snapshots/conformance__i_string_overlong_sequence_6_bytes_null.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
<raw bytes>
[91, 34, 252, 128, 128, 128, 128, 128, 34, 93]
stdout --- 
<empty>
stderr --- 
error: source did not contain valid utf8
 --> stdin
  |
