tests/snapshots/conformance__i_string_utf16be_no_bom.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
<raw bytes>
[0, 91, 0, 34, 0, 233, 0, 34, 0, 93]
stdout --- 
<empty>
stderr --- 
error: source did not contain valid utf8
 --> stdin
  |
