tests/snapshots/conformance__n_array_1_true_without_comma.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[1 true]
stdout --- 
<empty>
stderr --- 
error: expected entry or closed delimiter `]`, found `true`
 --> stdin:1:4
  |
1 | [1 true]
  | -  ^^^^
  | |
  | expected due to `[`
