tests/snapshots/conformance__n_array_comma_after_close.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[""],
stdout --- 
<empty>
stderr --- 
error: unexpected token `,` after json finished
 --> stdin:1:5
  |
1 | [""],
  |     ^
  |
help: consider removing the trailing content (starting with `,`)
  |
1 - [""],
1 + [""]
  |
